--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -86,3 +86,7 @@
     background: #2BE080;
     animation: preloader-inside-red 1s ease-in-out infinite;
 }
+
+.preloader__no-display {
+    display: none;
+}
