--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,23 +1,64 @@
 .header {
-    background-color: #FFFFFF;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 70px;
+  position: relative;
+  min-height: 74px;
+  align-items: center;
+}
+
+.header_gray {
+  background: #5C5C5C;
+}
+
+.header_small {
+  width: 396px;
+  padding: 70px 0 0 0;
+}
+.header__logo-link {
+  display: flex;
+  width: 38px;
+  height: 38px;
+  background-image: url('../../images/logo.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  object-fit: fill;
+}
+
+
+
+.header__logo-link_disable{
+  display: none;
+}
+@media screen and (max-width: 800px) {
+  .header {
+    padding: 0;
+  }
+
+  .header_gray {
+    padding: 0 14px;
+  }
+}
+
+@media screen and (max-width: 442px) {
+  .header_small {
+    align-items: center;
+    width: 100%;
     display: flex;
-    padding: 18px 70px;
-    position: relative;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+  }
+
+  .header__logo-link {
+    margin-left: 15px;
+  }
 }
 
-.header__logo {
-    margin-right: 44px;
-}
-
-@media(max-width: 992px) {
-    .header {
-        padding: 18px 30px;
-    }
-}
-
-@media(max-width: 720px) {
-    .header {
-        padding: 18px 14px;
-    }
+@media (max-width: 768px) {
+  .header__logo-link_size {
+    margin-left: 15px;
+  }
 }
 
