--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,24 +1,164 @@
-.login {
-    width: calc(100% - 442px*2);
-    padding: 70px 0;
-    margin: auto;
+.register {
+  width: 396px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 40px auto 70px;
+}
+
+.register__welcomeMessage {
+  display: flex;
+  width: 100%;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 16px;
+  padding: 0;
+  box-sizing: border-box;
+  justify-content: left;
+  height: fit-content;
+  color: black;
+}
+
+.register__form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.registration__label {
+  width: 100%;
+  font-size: 10px;
+  line-height: 12px;
+  color: #a0a0a0;
+  font-weight: 400;
+  margin: 0;
+  padding: 25px 0 0;
+}
+
+.register__input {
+  border: none;
+  border-bottom: 1px solid  #e8e8e8;
+  padding: 5px 0 10px;
+  box-sizing: border-box;
+  font-size: 14px;
+  background-color: transparent;
+  color: black;
+  outline: none;
+  margin: 0;
+}
+
+.register__btn {
+  height: 45px;
+  background-color: #2be080;
+  color: white;
+  font-size: 14px;
+  line-height: 1.2;
+  border-radius: 3px;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 134px 0 0;
+  border-style: none;
+}
+
+.register__btn:hover {
+  opacity: .85;
+  cursor: pointer;
+}
+
+.register__signin {
+  display: flex;
+  align-content: center;
+  margin-top: 16px;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.register__questionSignin {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  color: #a0a0a0;
+  display: flex;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.register__login-link {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  display: flex;
+  margin: 0;
+  margin-left: 6px;
+  padding: 0;
+  box-sizing: border-box;
+  color: #2be080;
+  text-decoration: none;
+  align-self: flex-end;
+}
+
+.register__error-message_inactive {
+  display: none;
+}
+
+.register__error-message {
+  display: inline;
+  font-size: 10px;
+  color: #ee3465;
+  line-height: 12px;
+  padding-top: 6px;
+}
+.register__input_valid {
+  border-bottom: 1px solid  #2be080;
+}
+
+.register__input_invalid {
+  color: #ee3465;
+  border-bottom: 1px solid  #ee3465;
+}
+
+.register__login-link:hover{
+  opacity: .6;
+  cursor: pointer;
+}
+
+.register__btn_login {
+  margin-top: 203px;
+}
+
+@media screen and (max-width: 500px) {
+  .register {
+    width: 260px;
+  }
+  .register__btn {
+    height: 45px;
+  }
+  .register__signin {
+    margin-top: 14px;
+  }
+
+  .register__questionSignin {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .register__login-link {
+    margin-left: 7px;
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .register__welcomeMessage{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.login__fields {
-    margin-bottom: 155px;
-}
-
-@media(max-width: 1179px) {
-    .login {
-        width: calc(100% - 186px*2);
-    }
-}
-
-@media(max-width: 720px) {
-    .login {
-        width: calc(100% - 30px*2);
-    }
+    width: 100%;
+  }
 }
