--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,193 +1,123 @@
 .profile {
-    width: calc(100% - 70px*2);
-    margin: auto;
-    padding: 74px 0 70px 0;
-    display: flex;
-    flex-direction: column;
+  width: 410px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 74px auto 70px;
 }
 
-.profile__title {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
-    text-align: center;
-    margin: 0 0 123px 0;
+.profile__welcomeMessage {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
 }
 
 .profile__form {
-    width: calc(100% - (435px - 70px)*2);
-    margin: auto;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  margin-top: 106px;
 }
 
-.profile__fields {
-    border: none;
-    padding: 0;
-    margin-bottom: 193px;
+.profile__group {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content:space-between;
+  padding: 17px 0 16px;
 }
 
-.profile__form-input {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 16px;
+.profile__group:first-of-type {
+  border-bottom: 1px solid #e8e8e8;
 }
 
-.profile__form-input:not(:last-child) {
-    border-bottom: 1px solid #E8E8E8;
-    margin-bottom: 17px;
+.profile__label {
+  display: flex;
+  font-weight: 500;
+  font-size: 11px;
+  line-height: 13px;
 }
 
-.profile__form-input-name {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 13px;
-    margin: 0;
+.profile__input {
+  border: none;
+  outline: none;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 13px;
+  color: black;
+  text-align: right;
+  background-color: transparent;
 }
 
-.profile__form-input-field {
-    border: none;
-    background: #FFFFFF;
-    outline: none;
-    font-size: 11px;
-    line-height: 13px;
-    text-align: right;
-    color: #000000;
-    width: 50%;
-    height: 90%;
+.profile__btn {
+  width: 100%;
+  align-items: center;
+  justify-items: center;
+  border: none;
+  margin-top: 203px;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  background-color: transparent;
 }
 
-.profile__form-input-field::placeholder {
-    font-size: 11px;
-    line-height: 13px;
-    text-align: right;
-    color: #000000;
-    padding: 4px;
+.profile__link {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 16px 0 0;
+  text-decoration: none;
+  color:#ee3456;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 16px;
 }
 
-.profile__button {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 13px;
-    line-height: 16px;
-    border: none;
-    outline: none;
-    padding: 0;
-    align-self: center;
-    margin-bottom: 9px;
-    padding: 9px 15px;
+.profile__btn:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
-.profile__form-message {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 11px;
-    line-height: 13px;
-    min-height: 13px;
-    text-align: center;
-    margin-bottom: 20px;
+.profile__link:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
-.profile__form-message_type_error {
-    color: #FF004C;
+@media screen and (max-width: 800px) {
+  .profile {
+    margin: 236px auto 269px;
+  }
+
+  .profile__form {
+    margin-top: 96px;
+  }
+
+  .profile__btn {
+    margin-top: 93px;
+  }
+
 }
 
-.profile__form-message_type_success {
-    color: #2BE080;
-}
+@media screen and (max-width: 500px) {
+  .profile {
+    width: 260px;
+    margin: 70px auto 40px;
+  }
 
-.profile__button_type_edit {
-    background: #FFFFFF;
-    transition: opacity 0.3s;
-}
+  .profile__form {
+    margin-top: 80px;
+  }
 
-.profile__button_type_edit:hover {
-    cursor: pointer;
-    opacity: 0.7;
-}
+  .profile__btn {
+    margin-top: 362px;
+    font-size: 12px;
+    line-height: 15px;
+  }
 
-.profile__form-error {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 11px;
-    line-height: 13px;
-    text-align: center;
-    color: #FF004C;
-    margin-bottom: 20px;
-}
+  .profile__link {
+    font-size: 12px;
+    line-height: 15px;
+  }
 
-.profile__button_type_save {
-    width: 100%;
-    height: 45px;
-    background: #2BE080;
-    border-radius: 3px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 17px;
-    text-align: center;
-
-    color: #FFFFFF;
-    transition: opacity 0.3s ease-in-out;
-}
-
-.profile__button_type_save:hover {
-    cursor: pointer;
-    opacity: 0.8;
-}
-
-.profile__button_type_save_disabled {
-    background: #F8F8F8;
-    color: #C2C2C2;
-}
-
-.profile__signout-link {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 16px;
-    color: #EE3465;
-    align-self: center;
-    transition: opacity 0.3s;
-}
-
-.profile__signout-link:hover {
-    cursor: pointer;
-    opacity: 0.7;
-}
-
-@media(max-width: 1179px) {
-    .profile {
-        width: calc(100% - 30px*2);
-        padding: 236px 0 269px 0;
-    }
-
-    .profile__form {
-        width: calc(100% - (179px - 30px)*2);
-    }
-
-    .profile__fields {
-        margin-bottom: 210px;
-    }
-}
-
-@media(max-width: 720px) {
-    .profile {
-        padding: 70px 0 40px 0;
-    }
-
-    .profile__title {
-        margin-bottom: 80px;
-    }
-
-    .profile__form {
-        width: 100%;
-    }
-
-    .profile__fields {
-        margin-bottom: 350px;
-    }
 }
