--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -7,6 +7,7 @@
     margin-right: auto;
     margin-left: auto;
     max-width: calc(100% - 80px);
+    padding-bottom: 30px;
 }
 
 .promo__heading {
@@ -46,6 +47,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.promo__list-item a {
+    text-decoration: none;
+    color: #000000;
 }
 
 @media(max-width: 768px) {
